--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Erick Fuentes",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "mongoose": "^8.19.2"
   }
 }
